@@ -34,6 +34,7 @@
 
     <!ENTITY acks SYSTEM "acks.sgml">
     <!ENTITY bground SYSTEM "bground.sgml">
+    <!ENTITY copyright SYSTEM "copyright.sgml">
     <!ENTITY engine SYSTEM "engine.sgml">
     <!ENTITY goals SYSTEM "goals.sgml">
     <!ENTITY install SYSTEM "install.sgml">
